Implement sort for charges
* Add integration test for charges repository
* Refactor controller to pass RequestCriteria to service
* Modify findCharges service method to pass Sort criteria to
  repository