@@ -14,10 +14,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.time.OffsetDateTime;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
+
 import org.bson.Document;
 import org.junit.Assert;
 import org.junit.jupiter.api.BeforeEach;
@@ -32,7 +30,9 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.core.io.Resource;
 import org.springframework.dao.DataAccessResourceFailureException;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.util.FileCopyUtils;
 import org.springframework.web.server.ResponseStatusException;
@@ -43,6 +43,7 @@ import uk.gov.companieshouse.api.model.ApiResponse;
 import uk.gov.companieshouse.charges.data.api.ChargesApiService;
 import uk.gov.companieshouse.charges.data.api.CompanyMetricsApiService;
 import uk.gov.companieshouse.charges.data.model.ChargesDocument;
+import uk.gov.companieshouse.charges.data.model.RequestCriteria;
 import uk.gov.companieshouse.charges.data.repository.ChargesRepository;
 import uk.gov.companieshouse.charges.data.transform.ChargesTransformer;
 import uk.gov.companieshouse.logging.Logger;
@@ -91,7 +92,6 @@ public class ChargesServiceTest {
 
    @Test
     public void find_charges_should_return_charges() throws IOException {
-        Pageable pageable = Pageable.ofSize(1);
         final PageImpl<ChargesDocument> page = new PageImpl<>(
                 List.of(createCharges()));
         when(chargesRepository.findCharges(eq(companyNumber), any(), any(Pageable.class)))
@@ -99,7 +99,7 @@ public class ChargesServiceTest {
 
         when(companyMetricsApiService.getCompanyMetrics(companyNumber))
                 .thenReturn(Optional.ofNullable(createMetrics()));
-        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber,pageable, "");
+        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber, new RequestCriteria());
         assertThat(charges.isPresent()).isTrue();
         assertThat(charges.get().getItems().isEmpty()).isFalse();
         assertThat(charges.get().getTotalCount()).isEqualTo(1);
@@ -110,7 +110,6 @@ public class ChargesServiceTest {
 
     @Test
     void findChargesWithFilter() throws IOException {
-        Pageable pageable = Pageable.ofSize(1);
         final PageImpl<ChargesDocument> page = new PageImpl<>(
                 List.of(createCharges()));
         when(chargesRepository.findCharges(eq(companyNumber), any(), any(Pageable.class)))
@@ -118,20 +117,59 @@ public class ChargesServiceTest {
 
         when(companyMetricsApiService.getCompanyMetrics(companyNumber))
                 .thenReturn(Optional.ofNullable(createMetrics()));
-        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber,pageable, "outstanding");
+        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber, new RequestCriteria().setFilter("outstanding"));
         assertThat(charges.isPresent()).isTrue();
         assertThat(charges.get().getItems().isEmpty()).isFalse();
         assertThat(charges.get().getTotalCount()).isEqualTo(1);
         assertThat(charges.get().getSatisfiedCount()).isEqualTo(1);
         assertThat(charges.get().getPartSatisfiedCount()).isEqualTo(2);
         assertThat(charges.get().getUnfilteredCount()).isEqualTo(14);
-        verify(chargesRepository).findCharges(companyNumber, Arrays.asList(ChargeApi.StatusEnum.SATISFIED, ChargeApi.StatusEnum.FULLY_SATISFIED), Pageable.ofSize(1));
+        verify(chargesRepository).findCharges(companyNumber, Arrays.asList(ChargeApi.StatusEnum.SATISFIED, ChargeApi.StatusEnum.FULLY_SATISFIED), Pageable.unpaged());
+    }
+
+    @Test
+    void findChargesWithSortedPageable() throws IOException {
+        final PageImpl<ChargesDocument> page = new PageImpl<>(
+                List.of(createCharges()));
+        when(chargesRepository.findCharges(eq(companyNumber), any(), any(Pageable.class)))
+                .thenReturn(page);
+
+        when(companyMetricsApiService.getCompanyMetrics(companyNumber))
+                .thenReturn(Optional.ofNullable(createMetrics()));
+        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber, new RequestCriteria().setItemsPerPage(1).setStartIndex(0));
+        assertThat(charges.isPresent()).isTrue();
+        assertThat(charges.get().getItems().isEmpty()).isFalse();
+        assertThat(charges.get().getTotalCount()).isEqualTo(1);
+        assertThat(charges.get().getSatisfiedCount()).isEqualTo(1);
+        assertThat(charges.get().getPartSatisfiedCount()).isEqualTo(2);
+        assertThat(charges.get().getUnfilteredCount()).isEqualTo(14);
+        verify(chargesRepository).findCharges(companyNumber, Collections.emptyList(), PageRequest.of(0, 1,
+                Sort.by(Sort.Order.desc("data.created_on"),
+                        Sort.Order.desc("data.charge_number"))));
+    }
+
+    @Test
+    void findChargesSortedWithoutPageable() throws IOException {
+        when(chargesRepository.findChargesUnpaged(eq(companyNumber), any(), any(Sort.class)))
+                .thenReturn(Collections.singletonList(createCharges()));
+
+        when(companyMetricsApiService.getCompanyMetrics(companyNumber))
+                .thenReturn(Optional.ofNullable(createMetrics()));
+        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber, new RequestCriteria());
+        assertThat(charges.isPresent()).isTrue();
+        assertThat(charges.get().getItems().isEmpty()).isFalse();
+        assertThat(charges.get().getTotalCount()).isEqualTo(1);
+        assertThat(charges.get().getSatisfiedCount()).isEqualTo(1);
+        assertThat(charges.get().getPartSatisfiedCount()).isEqualTo(2);
+        assertThat(charges.get().getUnfilteredCount()).isEqualTo(14);
+        verify(chargesRepository).findChargesUnpaged(companyNumber, Collections.emptyList(),
+                Sort.by(Sort.Order.desc("data.created_on"),
+                        Sort.Order.desc("data.charge_number")));
     }
 
     @Test
     public void empty_charges_when_repository_returns_empty_result() {
-        var pageable = Pageable.ofSize(1);
-        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber, pageable, "");
+        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber, new RequestCriteria());
         assertThat(charges.isPresent()).isTrue();
         assertThat(charges.get().getTotalCount()).isEqualTo(0);
         verify(companyMetricsApiService, times(1))
@@ -140,13 +178,12 @@ public class ChargesServiceTest {
 
     @Test
     public void empty_charges_when_company_metrics_returns_no_result() throws IOException {
-        var pageable = Pageable.ofSize(1);
         var page = new PageImpl<>(
                 List.of(createCharges()));
         when(chargesRepository.findCharges(eq(companyNumber), any(), any(Pageable.class)))
                 .thenReturn(page);
 
-        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber, pageable, "");
+        Optional<ChargesApi> charges = chargesService.findCharges(companyNumber, new RequestCriteria());
         assertThat(charges.isPresent()).isTrue();
         //assert no metrics
         assertThat(charges.get().getPartSatisfiedCount()).isEqualTo(0);
